[package]
name = "mafia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
serde_json = "1.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 3
